# shortmagnet

./: .coveragerc  .gitignore  .travis.yml  AUTHORS  ChangeLog  Dockerfile  Readme.rst  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
.github/: CONTRIBUTING.md
docs/: Makefile  make.bat
docs/source/: conf.py  index.rst
shortmagnet/: __init__.py
tests/features/: package.feature  shortener.feature
tests/features/steps/: steps_main.py  steps_package.py
tests/fixtures/: main.conf
tests/unit/: test_main.py  test_package.py
