[metadata]
name = shortmag.net
author = David Francos
author-email = opensource@davidfrancos.net
summary = Magnet-oriented URL Shortener.
description-file = Readme.rst
home-page = http://github.com/xayon/shortmagnet
license = GPL3+
classifier =
    Programming Language :: Python
    Development Status :: 1 - Alpha
    License :: OSI Approved :: GPL3+

[files]
packages =
    shortmagnet

[entry_points]
console_scripts =
    shortmagnet = shortmagnet:main

[tool:pytest]
addopts=--flake8 --cov-report=html --cov-report=term -v -m='not wip' tests/unit --cov

[aliases]
test=pytest
