[metadata]
name = shortmagnet
author = David Francos
author-email = opensource@davidfrancos.net
summary = Magnet-oriented URL Shortener.
description-file = Readme.rst
home-page = http://github.com/xayon/shortmagnet
license = GPL3+

[files]
packages =
    shortmagnet

[entry_points]
console_scripts =
    shortmagnet = shortmagnet:main

[tool:pytest]
addopts=--flake8 --cov-report=html --cov-report=term -v -m='not wip' tests/unit --cov shortmagnet

[aliases]
test=pytest

[build_sphinx]
builders = html
source-dir = docs/source
build-dir = docs/build
all-files = 1
